# scrape-cli

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LOG.md  README.md  _config.yml  index.html  manual.html  pyproject.toml  release_update.md  releasing.md  requirements.txt  scrape-linux-x86_64.spec  scrape.py  setup.py  source.md  tmp.md
.github/: copilot-instructions.md
.opencode/command/: openspec-apply.md
_layouts/: default.html
docs/: evaluation-v1.2.0.md  future-ideas.md
openspec/: project.md
presentation/: README.md  README_ITALIAN.md
resources/: test.html
scrape_cli/: __init__.py  scrape.py
tests/: test_scrape.py
